--- a/stylesheets/scss/partials/_grid.scss
+++ b/stylesheets/scss/partials/_grid.scss
@@ -46,21 +46,23 @@ embed {
 .clearfix { zoom: 1; }
 
 .container {
-  padding: 0 20px;
+  /*padding: 0 20px;*/ //todo: cleanup
 }
 
-.column, .row [class*="span"], .span1, .span2, .span3, .span4, .span5, .span6, .span7, .span8, .span9, .span10, .span11, .span12 {
-  width:100%;
+@media only screen and (max-width: 768px) {
+  .column, .row [class*="span"], .span1, .span2, .span3, .span4, .span5, .span6, .span7, .span8, .span9, .span10, .span11, .span12 {
+    width:100%;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
 }
-
-
 
 @media only screen and (min-width: 768px) {
 /* Grid HTML Classes */
 
 .row .row {
   width: auto;
-  margin: 0 -2rem 0 2rem;
+  margin: 0 -2rem;
   max-width: none;
 }
 
