--- a/stylesheets/scss/partials/_page.scss
+++ b/stylesheets/scss/partials/_page.scss
@@ -1,9 +1,9 @@
-#content.page.fullspread {
-	#content-primary {
+.content.fullspread {
+	.content-primary {
 		float:none;
 		width:100%;
 	}
 }
-.content.page .post img {
+.body.page .post img {
 	box-shadow: none !important;
 }
