--- a/stylesheets/scss/partials/_footer.scss
+++ b/stylesheets/scss/partials/_footer.scss
@@ -8,6 +8,6 @@
 	padding-top:$row-height *2;
 	padding-bottom:$row-height *2;
 	margin-top: $row-height * 2;
-	h3 { color: $color-highlight; }
+	.widget-title { color: $color-highlight; }
 	a { color: $color-highlight; }
 }
