--- a/stylesheets/scss/partials/_global.scss
+++ b/stylesheets/scss/partials/_global.scss
@@ -110,6 +110,11 @@ dd {
 	position: relative;
 }
 
+.page-title {
+	font-size:3.4rem;
+	font-weight: 300;
+}
+
 /*Search - not implemented*/
 #searchform input {
 	width:100%;
