--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ License:				GPL 3.0
 License URI:		http://www.gnu.org/copyleft/gpl.html
 Tags: 					brown, red, white, fixed-width, sticky-post, custom-menu
 */
-body, .metadata, .metadata li, .wp-caption img, .menu-item, .sub-menu, .comments-list .comment {
+body, .metadata, .metadata li, .wp-caption img, .menu-item, .sub-menu, .comments-list, .comments-list .comment {
   margin: 0;
   padding: 0;
 }
@@ -28,15 +28,11 @@ blockquote, pre, .bypostauthor {
   border-bottom: 2px solid #f0eceb;
 }
 
-.page-bottom {
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5);
-}
-
 table, .alignleft, .alignright, .aligncenter, .wp-caption, .single .post-content h1, .single .post-content h2 {
   margin: 1.5rem 0;
 }
 
-.no_comments, .comments_closed, .comments-list .children .comment {
+.no-comments, .comments-closed, .comments-list .children .comment {
   margin: 3rem 0;
 }
 
@@ -47,11 +43,14 @@ table, .alignleft, .alignright, .aligncenter, .wp-caption, .single .post-content
 /* ==========================================================================
    HTML5 display definitions
    ========================================================================== */
-* {
+*,
+*:before,
+*:after {
   box-sizing: border-box;
-  -webkit-transform: translate3d(0, 0, 0);
-  -moz-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
+}
+
+*:focus {
+  outline: none;
 }
 
 /*
@@ -394,12 +393,6 @@ table {
   border-spacing: 0;
 }
 
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
-}
-
 html,
 body {
   font-size: 10px;
@@ -420,27 +413,27 @@ img {
     height: auto;
   }
 }
-.row {
+.row, #comment-form {
   width: 100%;
   margin: 0 auto;
   max-width: 98rem;
 }
 
-.row:before, .row:after {
+.row:before, #comment-form:before, .row:after, #comment-form:after {
   content: " ";
   display: table;
 }
 
-.row:after {
+.row:after, #comment-form:after {
   clear: both;
 }
 
-.row .row:before, .row .row:after {
+.row .row:before, #comment-form .row:before, .row #comment-form:before, #comment-form #comment-form:before, .row .row:after, #comment-form .row:after, .row #comment-form:after, #comment-form #comment-form:after {
   content: " ";
   display: table;
 }
 
-.row .row:after {
+.row .row:after, #comment-form .row:after, .row #comment-form:after, #comment-form #comment-form:after {
   clear: both;
 }
 
@@ -462,7 +455,7 @@ img {
 }
 
 @media only screen and (max-width: 768px) {
-  .column, .post:not(.post-large) .post-content, .type-page .post-content, .post:not(.post-large) .post-info, .type-page .post-info, #comment-form-logged-in-as, #comment-form-info, #comment-form-content, .comment-content, .comment-info, #comment-form-allowed-tags, .column-full, .pagination, .site-title-description, .site-banner, .site-nav, .post:not(.post-large) .post-title, .type-page .post-title, .post-large .post-info, .post-large .post-content, .post-large .post-header, .row [class*="span"], .span1, .span2, .post:not(.post-large) .post-info, .type-page .post-info, #comment-form-logged-in-as, #comment-form-info, .comment-info, .span3, .span4, .span5, .span6, .span7, .span8, .post:not(.post-large) .post-content, .type-page .post-content, #comment-form-content, .comment-content, #comment-form-allowed-tags, .span9, .span10, .span11, .span12 {
+  .column, .type-post:not(.post-large) .post-content, .type-post:not(.post-large) .post-info, #comment-form-logged-in-as, #comment-form-info, .form-submit, #comment-form-content, .comment-content, .comment-info, #comment-form-allowed-tags, .column-full, .pagination, .site-title-description, .site-banner, .site-nav, .post-content, .post-title, .post-info, .single .post-excerpt p, .comments-header, .no-comments, .comments-closed, .comments-list, #respond, .row [class*="span"], #comment-form [class*="span"], .span1, .span2, .type-post:not(.post-large) .post-info, #comment-form-logged-in-as, #comment-form-info, .comment-info, .span3, .span4, .span5, .span6, .span7, .span8, .type-post:not(.post-large) .post-content, .form-submit, #comment-form-content, .comment-content, #comment-form-allowed-tags, .span9, .span10, .span11, .span12 {
     width: 100%;
     padding-left: 2rem;
     padding-right: 2rem;
@@ -470,29 +463,29 @@ img {
 }
 @media only screen and (min-width: 768px) {
   /* Grid HTML Classes */
-  .row .row {
+  .row .row, #comment-form .row, .row #comment-form, #comment-form #comment-form {
     width: auto;
     margin: 0 -2rem;
     max-width: none;
   }
 
-  .column, .post:not(.post-large) .post-content, .type-page .post-content, .post:not(.post-large) .post-info, .type-page .post-info, #comment-form-logged-in-as, #comment-form-info, #comment-form-content, .comment-content, .comment-info, #comment-form-allowed-tags, .row [class*="span"], .column-full, .pagination, .site-title-description, .site-banner, .site-nav, .post:not(.post-large) .post-title, .type-page .post-title, .post-large .post-info, .post-large .post-content, .post-large .post-header {
+  .column, .type-post:not(.post-large) .post-content, .type-post:not(.post-large) .post-info, #comment-form-logged-in-as, #comment-form-info, .form-submit, #comment-form-content, .comment-content, .comment-info, #comment-form-allowed-tags, .row [class*="span"], #comment-form [class*="span"], .column-full, .pagination, .site-title-description, .site-banner, .site-nav, .post-content, .post-title, .post-info, .single .post-excerpt p, .comments-header, .no-comments, .comments-closed, .comments-list, #respond {
     position: relative;
     padding-left: 2rem;
     padding-right: 2rem;
     float: left;
   }
 
-  .column-full, .pagination, .site-title-description, .site-banner, .site-nav, .post:not(.post-large) .post-title, .type-page .post-title, .post-large .post-info, .post-large .post-content, .post-large .post-header {
+  .column-full, .pagination, .site-title-description, .site-banner, .site-nav, .post-content, .post-title, .post-info, .single .post-excerpt p, .comments-header, .no-comments, .comments-closed, .comments-list, #respond {
     width: 100%;
   }
 
-  .push1, .push2, .post:not(.post-large) .post-content, .type-page .post-content, .comment-content, #comment-form-allowed-tags, .push3, #respond #submit, .push4, .push5, .push6, .push7, .push8, .push9, .push10, .push11 {
+  .push1, .push2, .type-post:not(.post-large) .post-content, .form-submit, .comment-content, #comment-form-allowed-tags, .push3, .push4, .push5, .push6, .push7, .push8, .push9, .push10, .push11 {
     position: relative;
     right: auto;
   }
 
-  .pull1, .pull2, .pull3, .pull4, .pull5, .pull6, .pull7, .pull8, .post:not(.post-large) .post-info, .type-page .post-info, .comment-info, .pull9, .pull10, .pull11 {
+  .pull1, .pull2, .pull3, .pull4, .pull5, .pull6, .pull7, .pull8, .type-post:not(.post-large) .post-info, .comment-info, .pull9, .pull10, .pull11 {
     position: relative;
     left: auto;
   }
@@ -501,7 +494,7 @@ img {
     width: 8.33333%;
   }
 
-  .span2, .post:not(.post-large) .post-info, .type-page .post-info, #comment-form-logged-in-as, #comment-form-info, .comment-info {
+  .span2, .type-post:not(.post-large) .post-info, #comment-form-logged-in-as, #comment-form-info, .comment-info {
     width: 16.66667%;
   }
 
@@ -525,7 +518,7 @@ img {
     width: 58.33333%;
   }
 
-  .span8, .post:not(.post-large) .post-content, .type-page .post-content, #comment-form-content, .comment-content, #comment-form-allowed-tags {
+  .span8, .type-post:not(.post-large) .post-content, .form-submit, #comment-form-content, .comment-content, #comment-form-allowed-tags {
     width: 66.66667%;
   }
 
@@ -553,7 +546,7 @@ img {
     right: 8.33333%;
   }
 
-  .push2, .post:not(.post-large) .post-content, .type-page .post-content, .comment-content, #comment-form-allowed-tags {
+  .push2, .type-post:not(.post-large) .post-content, .form-submit, .comment-content, #comment-form-allowed-tags {
     left: 16.66667%;
   }
 
@@ -561,7 +554,7 @@ img {
     right: 16.66667%;
   }
 
-  .push3, #respond #submit {
+  .push3 {
     left: 25%;
   }
 
@@ -605,7 +598,7 @@ img {
     left: 66.66667%;
   }
 
-  .pull8, .post:not(.post-large) .post-info, .type-page .post-info, .comment-info {
+  .pull8, .type-post:not(.post-large) .post-info, .comment-info {
     right: 66.66667%;
   }
 
@@ -770,6 +763,11 @@ dd {
 .content {
   margin: 0 0 6rem 0;
   position: relative;
+}
+
+.page-title {
+  font-size: 3.4rem;
+  font-weight: 300;
 }
 
 /*Search - not implemented*/
@@ -1089,7 +1087,7 @@ pre {
 }
 
 .bypostauthor {
-  border-color: #5d504f;
+  border-color: #d9d3d2;
 }
 
 .widget {
@@ -1107,15 +1105,15 @@ pre {
 
 input[type=text],
 textarea {
-  border: 2px solid #5d504f;
-  font: 1.8rem Sans-Serif;
+  border: 2px solid #f0eceb;
+  font: 1.3rem Sans-Serif;
   color: #5d504f;
   padding: 3px 4px;
   border-radius: 2px;
 }
 input[type=text]:focus,
 textarea:focus {
-  border: 2px solid #050000;
+  border: 2px solid #9e8e8d;
 }
 
 #comment-form-content textarea {
@@ -1247,15 +1245,18 @@ button, .button, input[type=submit] {
   margin: 6rem auto;
 }
 
-.post {
+.type-page, .type-post {
   font: 1.8rem/1.6 Georgia, serif;
 }
 
-.post + .post, .type-page + .type-page {
+.type-post + .type-post, .type-page + .type-page {
   margin-top: 6rem;
   margin-bottom: 6rem;
 }
 
+.post-content {
+  margin-bottom: 1.5rem;
+}
 .post-content p, .post-content li, .post-content dt, .post-content dd, .post-content blockquote {
   font-size: 1em;
 }
@@ -1267,9 +1268,6 @@ button, .button, input[type=submit] {
   opacity: .33;
 }
 
-.post-large .post-content {
-  margin-bottom: 1.5rem;
-}
 .post-large p {
   font-style: italic;
   font-size: 3.8rem;
@@ -1290,7 +1288,6 @@ button, .button, input[type=submit] {
   font-size: 2.1rem;
 }
 .single .post-title {
-  color: #3d302f;
   font-weight: 300;
 }
 .single .post-excerpt {
@@ -1298,14 +1295,15 @@ button, .button, input[type=submit] {
   color: #5d504f;
 }
 .single .post-excerpt p {
-  padding-top: 0;
+  margin-bottom: 0;
   font: italic 2.8rem/1.55 Georgia, serif;
 }
 .single .pagination {
   margin-top: 3rem;
 }
 .single .content-main {
-  margin-top: 3rem auto;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
   padding-bottom: 1.5rem;
 }
 .single .post-content {
@@ -1397,9 +1395,14 @@ button, .button, input[type=submit] {
   margin-bottom: 3rem;
 }
 
-.no_comments, .comments_closed {
+.no-comments, .comments-closed {
   font: italic 3.8rem/1.25 Georgia, serif;
   color: #5d504f;
+}
+
+.form-submit {
+  clear: both;
+  margin-top: 1.5rem;
 }
 
 .comment-content {
@@ -1413,10 +1416,13 @@ button, .button, input[type=submit] {
   font: 700 1.3rem Sans-Serif;
 }
 
+.html-explanation {
+  font-size: 1.2rem;
+  margin-top: 1.5rem;
+}
+
 .comments-list {
   list-style: none;
-  padding-left: 0;
-  margin-left: 0;
 }
 .comments-list .comment.parent {
   /*TODO: Figure out a visual style for this*/
@@ -1454,16 +1460,12 @@ button, .button, input[type=submit] {
   margin-bottom: 1.5rem;
   text-align: right;
 }
+#respond input[type=text]:last-child {
+  margin-bottom: 0;
+}
 #respond textarea {
   margin: 0;
   height: 118px;
-}
-#respond textarea:focus {
-  height: 37.5rem;
-}
-#respond #submit {
-  margin-top: 1.5rem;
-  /*TODO: Extend .push-three?*/
 }
 #respond .loggedin {
   font-style: italic;
