update theme to customize header

--- a/stylesheets/scss/partials/_variables.scss
+++ b/stylesheets/scss/partials/_variables.scss
@@ -8,7 +8,7 @@ $color-off-black: #050000;
 $color-midtone-light: #998482;
 $color-accent-alt: #ff1e00;
 
-$typeface-secondary: Sans-Serif;
+$typeface-secondary: "Helvetica Neue",sans-serif;
 $typeface-primary: Georgia, serif;
 
 $font-weight-thin: 100;
