--- a/stylesheets/scss/partials/_header.scss
+++ b/stylesheets/scss/partials/_header.scss
@@ -1,17 +1,14 @@
 #site-title-description {
 	margin-top: $row-height;
 }
-#site-title { 
-	font-size: $font-size-x-large; 
+#site-title {
+	font-size: $font-size-x-large;
 	margin-bottom: 5px;
+    float: left;
 }
-#site-description { 
-	margin-top:0; 
+#site-description {
+	margin-top:0;
 	font-size: $font-size-small;
-}
-#site-nav {
-	margin:$row-height 0 $row-height * 2 0; 
-	border-bottom:$border-break;
 }
 
 
@@ -21,7 +18,7 @@
 
 .menu {
 	@extend .clearfix;
-	margin:0 0 $row-height 0;	
+	margin:0 0 $row-height 0;
 }
 
 .menu > .menu-item:hover {
@@ -33,7 +30,7 @@
 	position:absolute;
 	z-index:999;
 	margin:0;
-	left:-9999px; 
+	left:-9999px;
 	border-top:2px solid $color-dark;
 	border-bottom:1px solid $color-midtone;
 	background:lighten($color-light, 3%);
@@ -56,14 +53,14 @@
 		display: block;
 		color: $color-off-black;
 		font: #{$font-weight-bold} #{$font-size-x-small} #{$typeface-secondary};
-		&:hover { 
-			color: $color-midtone; 
-		} 	
+		&:hover {
+			color: $color-midtone;
+		}
 	}
 }
 
 .menu-item:hover > .sub-menu {
-	left:0; 
+	left:0;
 }
 
 .sub-menu {
@@ -80,7 +77,7 @@
 	}
 	a {
 		font-weight: $font-weight-normal;
-		white-space:nowrap; 
+		white-space:nowrap;
 		&:hover  {
 			background:darken($color-light, 5%);
 			border:0;
@@ -89,7 +86,8 @@
 }
 
 #page-header {
-	position: relative;
+    border-bottom: 2px solid $color-light;
+    margin: $row-height * 2 auto $row-height * 2 auto;
 }
 
 #sub-header {
@@ -97,26 +95,80 @@
 	padding-bottom:$row-height;
 	margin-bottom:$row-height * 2;
 	p {
-		margin-top: 0; 
+		margin-top: 0;
 	}
 }
 
-@media only screen and  (max-width: 420px) {
-	#site-nav li {
-		float: none;
-		margin: 0;
-		border-bottom:1px solid $color-light;
-		a {
-			font-size: $font-size-small;
-			padding: $row-height 0;
-		}
-		&:last-child {
-			border-bottom: 0;
-		}
-	}
-	#site-nav {
-		ul ul {
-			display:none;
-		}
-	}
+#site-title, #menu-primary, #menu-primary li{
+    margin: 0;
+    padding: 0;
+}
+
+
+    #site-nav {
+        float: right;
+        position: relative;
+    }
+
+    #menu-primary {
+        float: right;
+        list-style: none;
+        display: block;
+        position: relative;
+    }
+
+#menu-primary li {
+    margin-top:$row-height;
+    margin-right: 40px;
+    float: left;
+}
+
+
+#menu-primary li a {
+    display: block;
+    height: $row-height;
+    color: $color-midtone;
+    font: 700 12px $typeface-secondary ;
+}
+
+#menu-primary li.last {
+    margin-right: 0;
+}
+
+#menu-primary .rss a {
+    background: $color-accent inline-image('rss.svg') no-repeat center center;
+    background-size: 50%;
+}
+
+#menu-primary .twitter a {
+    background: $color-accent inline-image('twitter.svg') no-repeat center center;
+    background-size: 60%;
+}
+
+#menu-primary .rss {
+    margin-top: -15px;
+}
+
+#menu-primary .rss, #menu-primary .twitter {
+    position: fixed;
+    z-index: 10000;
+    margin-left: 140px;
+}
+
+#menu-primary .rss a, #menu-primary .twitter a {
+    width: 45px;
+    height: 45px;
+    border-radius: 22.5px;
+    display: block;
+    box-shadow: 0px 0px 8px rgba(18,7,6,0.3);
+}
+
+#menu-primary .rss a, #menu-primary .twitter a, #bio_pic {
+    font: 0/0 a;
+    text-shadow: none;
+    color: transparent;
+}
+
+#menu-primary .twitter {
+    margin-top: 50px;
 }
