first version of my blog

--- a/stylesheets/scss/modules/_buttons.scss
+++ b/stylesheets/scss/modules/_buttons.scss
@@ -2,7 +2,7 @@
 .button, input[type=submit] {
 	display: inline-block;
 	background: $color-light;
-	color: $color-midtone;
+	color: $color-off-black;
 	padding: 8px 10px;
 	border-radius: 2px;
 	font: #{$font-weight-bold} #{$font-size-small} #{$typeface-secondary};
