increment version number
release candidate version 2

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Frank
 Theme URI: http://github.com/Frank
 Description: For creators, bloggers and writers
-Version: NEXT
+Version: 2.0.0 RC
 Author: Arnab Wahid
 Author URI: http://github.com/arnabwahid
 Domain Path: /languages
